--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Startup | Avvia la tua Startup a basso costo in italia</title>
-  <meta name="description" content="Crea la tua startup a basso costo in italia. Scopri la tua audience, ottieni finanziamenti, crea la tua azienda di successo. Registrati!"/>
+  <meta name="description" content="Avvia la tua startup a basso costo in italia. Scopri la tua audience, ottieni finanziamenti, crea la tua azienda di successo. Registrati!"/>
 
   <!-- FB open graph -->
   <meta property="og:url" content="http://growthxitalia.com" /> 
@@ -16,13 +16,13 @@
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Growth-X"> 
   <meta property="og:image" content="http://growthxitalia.com/background4.jpg" /> 
-  <meta property="og:description" content="Crea la tua startup a basso costo in italia. Scopri la tua audience, ottieni finanziamenti, crea la tua azienda di successo. Registrati! />
+  <meta property="og:description" content="Avvia la tua startup a basso costo in italia. Scopri la tua audience, ottieni finanziamenti, crea la tua azienda di successo. Registrati! />
 
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@Growthx4">
   <meta name="twitter:title" content="Growth-X">
-  <meta name="twitter:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita.">
+  <meta name="twitter:description" content="Avvia la tua startup a basso costo in italia. Scopri la tua audience, ottieni finanziamenti, crea la tua azienda di successo. Registrati!">
   <meta name="twitter:creator" content="@Growthx4">
   <meta name="twitter:image" content="http://growthxitalia.com/background4.jpg">
 
@@ -109,7 +109,7 @@
   	            <h2 class="center materialize-azzurro-text"><i class="material-icons">timeline</i></h2>
   	            <h5 class="center">LEAN STARTUP</h5><br><br>
 
-  	            <h5 class="center light materialize-grigio-text">Impara come applicare la metodologia Lean Startup per avviare il tuo business con sucesso.</h5>
+  	            <h5 class="center light materialize-grigio-text">Impara il metodo Lean Startup per avviare il tuo business con sucesso.</h5>
   	          </div>
   	        </div>
 
@@ -118,7 +118,7 @@
   	            <h2 class="center materialize-azzurro-text"><i class="material-icons">search</i></h2>
   	            <h5 class="center">SCOPRI LA TUA AUDIENCE</h5><br>
 
-  	            <h5 class="center light materialize-grigio-text">Facciamo ricerche di mercato per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
+  	            <h5 class="center light materialize-grigio-text">Facciamo ricerche di mercato per aumentare la tua audience.</h5>
   	          </div>
   	        </div>
 
@@ -127,7 +127,7 @@
   	            <h2 class="center materialize-azzurro-text"><i class="material-icons">desktop_mac</i></h2>
   	            <h5 class="center">WEB & PRODUCT DEVELOPMENT</h5><br>
 
-  	            <h5 class="center light materialize-grigio-text">Realizziamo una Landing Page del tuo prodotto su misura per la tua azienda e per una migliore user experience.</h5>
+  	            <h5 class="center light materialize-grigio-text">Realizziamo Landing Page del tuo prodotto su misura.</h5>
   	          </div>               
   	        </div>
   	      </div> 
@@ -142,7 +142,7 @@
         <div class="row center">
           <i class="material-icons registrazione-icon">mail</i>
           <h3 class="col s12 light">Vuoi creare una startup, formarti, o ottenere finanziamenti?</h3>
-          <h5 class="col s12">Registrati per rimanere aggiornato sul rilascio della versione beta</h5>
+          <h5 class="col s12">Registrati per rimanere aggiornato sulle novità</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
 
@@ -172,8 +172,8 @@
         <div class="col s12 center">
           <i class="center material-icons contatti-icon materialize-azzurro-text">book</i><br><br><br>
           <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-rosso white-text" href="https://amzn.to/2NxZdrM" data-mode="popup" target="_blank">Sarica la guida</a>
-          <h3 class="col s12 contatti-subtitle materialize-grigio-text">Se hai bisogno di fomazione puoi iniziare scaricando la nostra breve guida per imparare i processi fondamnetali per avviare la tua startup.</h3><br> 
-          <h5 class="col s12 contatti-subtitle materialize-grigio-text">Hai già avviato la tua startup, ma hai bisogno di finanziamneti? Contattaci, abbiamo noi i contatti che ti servono. Verrai presentato alla nostra azienda partner numero uno in italia per trovare finanziamenti per le startup.</h5>
+          <h3 class="col s12 contatti-subtitle materialize-grigio-text">Scarica la guida per startup per imparare i processi fondamentali.</h3><br> 
+          <h5 class="col s12 contatti-subtitle materialize-grigio-text">Hai già avviato la tua startup, ma hai bisogno di finanziamneti? Contattaci!</h5>
           <br>
         </div>
       </div>
